Ajout endpoints Note
